src/zenoh_dart.h

/// Declares a subscriber on the given key expression.
///
/// Samples are posted to the Dart isolate via `Dart_PostCObject_DL` on
/// the given native port. Each sample is sent as a `Dart_CObject` array
/// of 4 elements: [keyexpr(string), payload(Uint8List), kind(int64),
/// attachment(null or Uint8List)].
///
/// @param session     Const pointer to a loaned session.
/// @param subscriber  Pointer to an uninitialized z_owned_subscriber_t.
/// @param keyexpr     Const pointer to a loaned key expression.
/// @param dart_port   The Dart native port to post samples to.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_declare_subscriber(
    const z_loaned_session_t* session,
    z_owned_subscriber_t* subscriber,
    const z_loaned_keyexpr_t* keyexpr,
    int64_t dart_port);
/// Drops (undeclares and frees) a subscriber.
///
/// After this call the owned subscriber is in gravestone state.
/// A second drop is a safe no-op.
///
/// @param subscriber  Pointer to a z_owned_subscriber_t to drop.
FFI_PLUGIN_EXPORT void zd_subscriber_drop(z_owned_subscriber_t* subscriber);
// ---------------------------------------------------------------------------
// Publisher
// ---------------------------------------------------------------------------

/// Returns the size of z_owned_publisher_t in bytes.
FFI_PLUGIN_EXPORT size_t zd_publisher_sizeof(void);
/// Declares a publisher on the given key expression.
///
/// @param session             Const pointer to a loaned session.
/// @param publisher           Pointer to an uninitialized z_owned_publisher_t.
/// @param keyexpr             Const pointer to a loaned key expression.
/// @param encoding            MIME type string for default encoding (NULL = default).
/// @param congestion_control  Congestion control strategy (-1 = default/block).
/// @param priority            Message priority (-1 = default/data=5).
/// @param is_express          Express mode (-1 = default, 0 = false, 1 = true).
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_declare_publisher(
    const z_loaned_session_t* session,
    z_owned_publisher_t* publisher,
    const z_loaned_keyexpr_t* keyexpr,
    const char* encoding,
    int congestion_control,
    int priority,
    int8_t is_express);
/// Obtains a const loaned reference to the publisher.
FFI_PLUGIN_EXPORT const z_loaned_publisher_t* zd_publisher_loan(
    const z_owned_publisher_t* publisher);
/// Drops (undeclares and frees) a publisher.
FFI_PLUGIN_EXPORT void zd_publisher_drop(z_owned_publisher_t* publisher);
/// Publishes data through the publisher.
///
/// @param publisher   Const pointer to a loaned publisher.
/// @param payload     Pointer to owned bytes (consumed via z_bytes_move).
/// @param encoding    MIME type string for per-put encoding override (NULL = publisher default).
/// @param attachment  Pointer to owned bytes for attachment (consumed if non-NULL, NULL = no attachment).
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_publisher_put(
    const z_loaned_publisher_t* publisher,
    z_owned_bytes_t* payload,
    const char* encoding,
    z_owned_bytes_t* attachment);
/// Sends a DELETE through the publisher.
FFI_PLUGIN_EXPORT int zd_publisher_delete(
    const z_loaned_publisher_t* publisher);
/// Returns the key expression of a publisher.
FFI_PLUGIN_EXPORT const z_loaned_keyexpr_t* zd_publisher_keyexpr(
    const z_loaned_publisher_t* publisher);
/// Declares a background matching listener on the publisher.
///
/// Matching status changes are posted to the Dart isolate via the given
/// native port as Int64 values (1 = matching, 0 = not matching).
///
/// @param publisher  Const pointer to a loaned publisher.
/// @param dart_port  The Dart native port to post matching status to.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_publisher_declare_background_matching_listener(
    const z_loaned_publisher_t* publisher,
    int64_t dart_port);
/// Gets the current matching status of a publisher.
///
/// @param publisher  Const pointer to a loaned publisher.
/// @param matching   Out parameter: filled with 0 (no match) or 1 (match).
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_publisher_get_matching_status(
    const z_loaned_publisher_t* publisher,
    int* matching);
// ---------------------------------------------------------------------------
// Info (Session identity)
// ---------------------------------------------------------------------------

/// Copies the session's own ZID (16 bytes) into the provided buffer.
///
/// @param session  Const pointer to a loaned session.
/// @param out_id   Pointer to a 16-byte buffer to receive the ZID.
FFI_PLUGIN_EXPORT void zd_info_zid(const z_loaned_session_t* session,
                                   uint8_t* out_id);
/// Converts a 16-byte ZID to its string representation.
///
/// @param id   Pointer to a 16-byte ZID buffer.
/// @param out  Pointer to an uninitialized z_owned_string_t to receive the result.
FFI_PLUGIN_EXPORT void zd_id_to_string(const uint8_t* id,
                                       z_owned_string_t* out);
/// Collects connected router ZIDs into a caller-provided buffer.
///
/// Each ZID is 16 bytes. The buffer must be at least max_count * 16 bytes.
///
/// @param session    Const pointer to a loaned session.
/// @param out_ids    Pointer to a buffer for ZID bytes (16 bytes per ZID).
/// @param max_count  Maximum number of ZIDs to collect.
/// @return Number of ZIDs written to the buffer.
FFI_PLUGIN_EXPORT int zd_info_routers_zid(const z_loaned_session_t* session,
                                          uint8_t* out_ids, int max_count);
/// Collects connected peer ZIDs into a caller-provided buffer.
///
/// Each ZID is 16 bytes. The buffer must be at least max_count * 16 bytes.
///
/// @param session    Const pointer to a loaned session.
/// @param out_ids    Pointer to a buffer for ZID bytes (16 bytes per ZID).
/// @param max_count  Maximum number of ZIDs to collect.
/// @return Number of ZIDs written to the buffer.
FFI_PLUGIN_EXPORT int zd_info_peers_zid(const z_loaned_session_t* session,
                                        uint8_t* out_ids, int max_count);
// ---------------------------------------------------------------------------
// Scout
// ---------------------------------------------------------------------------

/// Scouts for zenoh entities on the network.
///
/// Each discovered hello is posted to the Dart native port as a
/// Dart_CObject array of 3 elements:
///   [0] TypedData(Uint8, 16 bytes) -- ZID
///   [1] Int64 -- whatami value
///   [2] String -- locators joined with ';'
///
/// After z_scout returns, a null sentinel is posted to signal completion.
///
/// @param config      Pointer to an owned config (consumed). NULL = default config.
/// @param dart_port   The Dart native port to post Hello messages to.
/// @param timeout_ms  Scouting timeout in milliseconds.
/// @param what        Bitmask of entity types to scout for (e.g., 3 = router+peer).
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_scout(z_owned_config_t* config, int64_t dart_port,
                               uint64_t timeout_ms, int what);
/// Converts a whatami integer to a human-readable view string.
///
/// @param whatami  The whatami value (1=router, 2=peer, 4=client).
/// @param out      Pointer to an uninitialized z_view_string_t.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_whatami_to_view_string(int whatami,
                                                z_view_string_t* out);
/// Returns the size of z_owned_shm_provider_t in bytes.
FFI_PLUGIN_EXPORT size_t zd_shm_provider_sizeof(void);
/// Creates a default SHM provider with the given total size.
///
/// @param provider  Pointer to an uninitialized z_owned_shm_provider_t.
/// @param total_size  Total size of the SHM pool in bytes.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_shm_provider_new(z_owned_shm_provider_t* provider,
                                          size_t total_size);
/// Obtains a const loaned reference to the SHM provider.
FFI_PLUGIN_EXPORT const z_loaned_shm_provider_t* zd_shm_provider_loan(
    const z_owned_shm_provider_t* provider);
/// Drops (frees) the SHM provider.
FFI_PLUGIN_EXPORT void zd_shm_provider_drop(z_owned_shm_provider_t* provider);
/// Returns the available (free) bytes in the SHM provider.
FFI_PLUGIN_EXPORT size_t zd_shm_provider_available(
    const z_loaned_shm_provider_t* provider);
/// Returns the size of z_owned_shm_mut_t in bytes.
FFI_PLUGIN_EXPORT size_t zd_shm_mut_sizeof(void);
/// Allocates a mutable SHM buffer from the provider.
///
/// @param provider  Const pointer to a loaned SHM provider.
/// @param buf       Pointer to an uninitialized z_owned_shm_mut_t.
/// @param size      Size of the buffer to allocate.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_shm_provider_alloc(
    const z_loaned_shm_provider_t* provider,
    z_owned_shm_mut_t* buf,
    size_t size);
/// Allocates a mutable SHM buffer with GC + defrag + blocking.
///
/// @param provider  Const pointer to a loaned SHM provider.
/// @param buf       Pointer to an uninitialized z_owned_shm_mut_t.
/// @param size      Size of the buffer to allocate.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_shm_provider_alloc_gc_defrag_blocking(
    const z_loaned_shm_provider_t* provider,
    z_owned_shm_mut_t* buf,
    size_t size);
/// Obtains a mutable loaned reference to the SHM buffer.
FFI_PLUGIN_EXPORT z_loaned_shm_mut_t* zd_shm_mut_loan_mut(
    z_owned_shm_mut_t* buf);
/// Returns a mutable pointer to the SHM buffer data.
FFI_PLUGIN_EXPORT uint8_t* zd_shm_mut_data_mut(z_loaned_shm_mut_t* buf);
/// Returns the length of the SHM buffer.
FFI_PLUGIN_EXPORT size_t zd_shm_mut_len(const z_loaned_shm_mut_t* buf);
/// Converts a mutable SHM buffer into owned bytes (consuming the buffer).
///
/// @param bytes  Pointer to an uninitialized z_owned_bytes_t.
/// @param buf    Pointer to a z_owned_shm_mut_t (consumed).
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_bytes_from_shm_mut(z_owned_bytes_t* bytes,
                                            z_owned_shm_mut_t* buf);
/// Drops (frees) a mutable SHM buffer.
FFI_PLUGIN_EXPORT void zd_shm_mut_drop(z_owned_shm_mut_t* buf);