packages/zenoh/lib/src/bindings.dart


/// Declares a subscriber on the given key expression.
///
/// Samples are posted to the Dart isolate via `Dart_PostCObject_DL` on
/// the given native port. Each sample is sent as a `Dart_CObject` array
/// of 4 elements: [keyexpr(string), payload(Uint8List), kind(int64),
/// attachment(null or Uint8List)].
///
/// @param session     Const pointer to a loaned session.
/// @param subscriber  Pointer to an uninitialized z_owned_subscriber_t.
/// @param keyexpr     Const pointer to a loaned key expression.
/// @param dart_port   The Dart native port to post samples to.
/// @return 0 on success, negative on failure.
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Opaque>,
    ffi.Pointer<ffi.Opaque>,
    ffi.Pointer<ffi.Opaque>,
    ffi.Int64,
  )
>()
external int zd_declare_subscriber(
  ffi.Pointer<ffi.Opaque> session,
  ffi.Pointer<ffi.Opaque> subscriber,
  ffi.Pointer<ffi.Opaque> keyexpr,
  int dart_port,
);

/// Drops (undeclares and frees) a subscriber.
///
/// After this call the owned subscriber is in gravestone state.
/// A second drop is a safe no-op.
///
/// @param subscriber  Pointer to a z_owned_subscriber_t to drop.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>()
external void zd_subscriber_drop(ffi.Pointer<ffi.Opaque> subscriber);

/// Returns the size of z_owned_publisher_t in bytes.
@ffi.Native<ffi.Size Function()>()
external int zd_publisher_sizeof();

/// Declares a publisher on the given key expression.
///
/// @param session             Const pointer to a loaned session.
/// @param publisher           Pointer to an uninitialized z_owned_publisher_t.
/// @param keyexpr             Const pointer to a loaned key expression.
/// @param encoding            MIME type string for default encoding (NULL = default).
/// @param congestion_control  Congestion control strategy (-1 = default/block).
/// @param priority            Message priority (-1 = default/data=5).
/// @return 0 on success, negative on failure.
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Opaque>,
    ffi.Pointer<ffi.Opaque>,
    ffi.Pointer<ffi.Opaque>,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Int,
  )
>()
external int zd_declare_publisher(
  ffi.Pointer<ffi.Opaque> session,
  ffi.Pointer<ffi.Opaque> publisher,
  ffi.Pointer<ffi.Opaque> keyexpr,
  ffi.Pointer<ffi.Char> encoding,
  int congestion_control,
  int priority,
);

/// Obtains a const loaned reference to the publisher.
@ffi.Native<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>()
external ffi.Pointer<ffi.Opaque> zd_publisher_loan(
  ffi.Pointer<ffi.Opaque> publisher,
);

/// Drops (undeclares and frees) a publisher.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>()
external void zd_publisher_drop(ffi.Pointer<ffi.Opaque> publisher);

/// Publishes data through the publisher.
///
/// @param publisher   Const pointer to a loaned publisher.
/// @param payload     Pointer to owned bytes (consumed via z_bytes_move).
/// @param encoding    MIME type string for per-put encoding override (NULL = publisher default).
/// @param attachment  Pointer to owned bytes for attachment (consumed if non-NULL, NULL = no attachment).
/// @return 0 on success, negative on failure.
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Opaque>,
    ffi.Pointer<ffi.Opaque>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Opaque>,
  )
>()
external int zd_publisher_put(
  ffi.Pointer<ffi.Opaque> publisher,
  ffi.Pointer<ffi.Opaque> payload,
  ffi.Pointer<ffi.Char> encoding,
  ffi.Pointer<ffi.Opaque> attachment,
);

/// Sends a DELETE through the publisher.
@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Opaque>)>()
external int zd_publisher_delete(ffi.Pointer<ffi.Opaque> publisher);

/// Returns the key expression of a publisher.
@ffi.Native<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>()
external ffi.Pointer<ffi.Opaque> zd_publisher_keyexpr(
  ffi.Pointer<ffi.Opaque> publisher,
);

/// Declares a background matching listener on the publisher.
///
/// Matching status changes are posted to the Dart isolate via the given
/// native port as Int64 values (1 = matching, 0 = not matching).
///
/// @param publisher  Const pointer to a loaned publisher.
/// @param dart_port  The Dart native port to post matching status to.
/// @return 0 on success, negative on failure.
@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Int64)>()
external int zd_publisher_declare_background_matching_listener(
  ffi.Pointer<ffi.Opaque> publisher,
  int dart_port,
);

/// Gets the current matching status of a publisher.
///
/// @param publisher  Const pointer to a loaned publisher.
/// @param matching   Out parameter: filled with 0 (no match) or 1 (match).
/// @return 0 on success, negative on failure.
@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Int>)>()
external int zd_publisher_get_matching_status(
  ffi.Pointer<ffi.Opaque> publisher,
  ffi.Pointer<ffi.Int> matching,
);

/// Copies the session's own ZID (16 bytes) into the provided buffer.
///
/// @param session  Const pointer to a loaned session.
/// @param out_id   Pointer to a 16-byte buffer to receive the ZID.
@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Uint8>)
>()
external void zd_info_zid(
  ffi.Pointer<ffi.Opaque> session,
  ffi.Pointer<ffi.Uint8> out_id,
);

/// Converts a 16-byte ZID to its string representation.
///
/// @param id   Pointer to a 16-byte ZID buffer.
/// @param out  Pointer to an uninitialized z_owned_string_t to receive the result.
@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Opaque>)
>()
external void zd_id_to_string(
  ffi.Pointer<ffi.Uint8> id,
  ffi.Pointer<ffi.Opaque> out,
);

/// Collects connected router ZIDs into a caller-provided buffer.
///
/// Each ZID is 16 bytes. The buffer must be at least max_count * 16 bytes.
///
/// @param session    Const pointer to a loaned session.
/// @param out_ids    Pointer to a buffer for ZID bytes (16 bytes per ZID).
/// @param max_count  Maximum number of ZIDs to collect.
/// @return Number of ZIDs written to the buffer.
@ffi.Native<
  ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Uint8>, ffi.Int)
>()
external int zd_info_routers_zid(
  ffi.Pointer<ffi.Opaque> session,
  ffi.Pointer<ffi.Uint8> out_ids,
  int max_count,
);

/// Collects connected peer ZIDs into a caller-provided buffer.
///
/// Each ZID is 16 bytes. The buffer must be at least max_count * 16 bytes.
///
/// @param session    Const pointer to a loaned session.
/// @param out_ids    Pointer to a buffer for ZID bytes (16 bytes per ZID).
/// @param max_count  Maximum number of ZIDs to collect.
/// @return Number of ZIDs written to the buffer.
@ffi.Native<
  ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Uint8>, ffi.Int)
>()
external int zd_info_peers_zid(
  ffi.Pointer<ffi.Opaque> session,
  ffi.Pointer<ffi.Uint8> out_ids,
  int max_count,
);

/// Scouts for zenoh entities on the network.
///
/// Each discovered hello is posted to the Dart native port as a
/// Dart_CObject array of 3 elements:
/// [0] TypedData(Uint8, 16 bytes) -- ZID
/// [1] Int64 -- whatami value
/// [2] String -- locators joined with ';'
///
/// After z_scout returns, a null sentinel is posted to signal completion.
///
/// @param config      Pointer to an owned config (consumed). NULL = default config.
/// @param dart_port   The Dart native port to post Hello messages to.
/// @param timeout_ms  Scouting timeout in milliseconds.
/// @param what        Bitmask of entity types to scout for (e.g., 3 = router+peer).
/// @return 0 on success, negative on failure.
@ffi.Native<
  ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Int64, ffi.Uint64, ffi.Int)
>()
external int zd_scout(
  ffi.Pointer<ffi.Opaque> config,
  int dart_port,
  int timeout_ms,
  int what,
);

/// Converts a whatami integer to a human-readable view string.
///
/// @param whatami  The whatami value (1=router, 2=peer, 4=client).
/// @param out      Pointer to an uninitialized z_view_string_t.
/// @return 0 on success, negative on failure.
@ffi.Native<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Opaque>)>()
external int zd_whatami_to_view_string(
  int whatami,
  ffi.Pointer<ffi.Opaque> out,
);

/// Returns the size of z_owned_shm_provider_t in bytes.
@ffi.Native<ffi.Size Function()>()
external int zd_shm_provider_sizeof();

/// Creates a default SHM provider with the given total size.
///
/// @param provider  Pointer to an uninitialized z_owned_shm_provider_t.
/// @param total_size  Total size of the SHM pool in bytes.
/// @return 0 on success, negative on failure.
@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Size)>()
external int zd_shm_provider_new(
  ffi.Pointer<ffi.Opaque> provider,
  int total_size,
);

/// Obtains a const loaned reference to the SHM provider.
@ffi.Native<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>()
external ffi.Pointer<ffi.Opaque> zd_shm_provider_loan(
  ffi.Pointer<ffi.Opaque> provider,
);

/// Drops (frees) the SHM provider.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>()
external void zd_shm_provider_drop(ffi.Pointer<ffi.Opaque> provider);

/// Returns the available (free) bytes in the SHM provider.
@ffi.Native<ffi.Size Function(ffi.Pointer<ffi.Opaque>)>()
external int zd_shm_provider_available(ffi.Pointer<ffi.Opaque> provider);

/// Returns the size of z_owned_shm_mut_t in bytes.
@ffi.Native<ffi.Size Function()>()
external int zd_shm_mut_sizeof();

/// Allocates a mutable SHM buffer from the provider.
///
/// @param provider  Const pointer to a loaned SHM provider.
/// @param buf       Pointer to an uninitialized z_owned_shm_mut_t.
/// @param size      Size of the buffer to allocate.
/// @return 0 on success, negative on failure.
@ffi.Native<
  ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>, ffi.Size)
>()
external int zd_shm_provider_alloc(
  ffi.Pointer<ffi.Opaque> provider,
  ffi.Pointer<ffi.Opaque> buf,
  int size,
);

/// Allocates a mutable SHM buffer with GC + defrag + blocking.
///
/// @param provider  Const pointer to a loaned SHM provider.
/// @param buf       Pointer to an uninitialized z_owned_shm_mut_t.
/// @param size      Size of the buffer to allocate.
/// @return 0 on success, negative on failure.
@ffi.Native<
  ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>, ffi.Size)
>()
external int zd_shm_provider_alloc_gc_defrag_blocking(
  ffi.Pointer<ffi.Opaque> provider,
  ffi.Pointer<ffi.Opaque> buf,
  int size,
);

/// Obtains a mutable loaned reference to the SHM buffer.
@ffi.Native<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>()
external ffi.Pointer<ffi.Opaque> zd_shm_mut_loan_mut(
  ffi.Pointer<ffi.Opaque> buf,
);

/// Returns a mutable pointer to the SHM buffer data.
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ffi.Opaque>)>()
external ffi.Pointer<ffi.Uint8> zd_shm_mut_data_mut(
  ffi.Pointer<ffi.Opaque> buf,
);

/// Returns the length of the SHM buffer.
@ffi.Native<ffi.Size Function(ffi.Pointer<ffi.Opaque>)>()
external int zd_shm_mut_len(ffi.Pointer<ffi.Opaque> buf);

/// Converts a mutable SHM buffer into owned bytes (consuming the buffer).
///
/// @param bytes  Pointer to an uninitialized z_owned_bytes_t.
/// @param buf    Pointer to a z_owned_shm_mut_t (consumed).
/// @return 0 on success, negative on failure.
@ffi.Native<
  ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
>()
external int zd_bytes_from_shm_mut(
  ffi.Pointer<ffi.Opaque> bytes,
  ffi.Pointer<ffi.Opaque> buf,
);

/// Drops (frees) a mutable SHM buffer.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>()
external void zd_shm_mut_drop(ffi.Pointer<ffi.Opaque> buf);

final class UnnamedStruct extends ffi.Struct {
  @ffi.UnsignedInt()
  external int __low;

  @ffi.UnsignedInt()
  external int __high;
}

final class __atomic_wide_counter extends ffi.Union {
  @ffi.UnsignedLongLong()
  external int __value64;

  external UnnamedStruct __value32;
}
